[package]
name = "tcp-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.6", features = ["codec"] }
futures = "0.3.14"
bytes = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.5"